--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,23 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/bulma/css/bulma.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
+@import '../node_modules/hamburgers/dist/hamburgers.min.css';
 
 html,body {
     height: 100%;
     position: relative;
+    
 }
 
+body {
+    background-image: url(./assets/emailsBG.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
+}
 body > div {
-    height: 100%;
+    height: auto;
     position: relative;
 }
