--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@ body {
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    overflow: hidden;
+    overflow:  scroll;
 }
 body > div {
     height: auto;
