--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,11 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/bulma/css/bulma.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
-@import '../node_modules/hamburgers/dist/hamburgers.min.css';
-
-html,body {
+// @import '../node_modules/hamburgers/dist/hamburgers.min.css';
+html,
+body {
     height: 100%;
     position: relative;
-    
 }
 
 body {
@@ -15,9 +14,10 @@ body {
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    overflow:  scroll;
+    overflow: scroll;
 }
-body > div {
+
+body>div {
     height: auto;
     position: relative;
 }
