--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/bulma/css/bulma.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
-// @import '../node_modules/hamburgers/dist/hamburgers.min.css';
+@import '../node_modules/hamburgers/dist/hamburgers.min.css';
 html,
 body {
     height: 100%;
