--- a/src/style.scss
+++ b/src/style.scss
@@ -2,11 +2,7 @@
 @import '../node_modules/bulma/css/bulma.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
 @import '../node_modules/hamburgers/dist/hamburgers.min.css';
-html,
-body {
-    height: 100%;
-    position: relative;
-}
+
 
 body {
     background-image: url(./assets/emailsBG.jpg);
@@ -14,10 +10,5 @@ body {
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    overflow: scroll;
-}
-
-body>div {
-    height: auto;
-    position: relative;
+    overflow-y: scroll;
 }
